# swagger.yaml
@@ -8,14 +8,14 @@ info:
   version: 1.0.11
 externalDocs:
   description: Find out more about project
-  url: https://github.com/Vasyl808/python_labs
+  url: https://github.com/Vasyl808/python_l
 servers:
   - url: http://localhost:8080/api/v1
 tags:
   - name: medicine
     description: Everything about medicine.
   - name: pharmacy
-    description: Access to medicine database.
+    description: Our pharmacy.
   - name: user
     description: Operations about user.
   - name: category
@@ -51,12 +51,14 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/Medicine'
-        '405':
+        '400':
           description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
       security:
         - pharmacy_auth:
-            - write:medicine
-            - read:medicine
+            - write:user
+            - read:user
   /medicine/findByStatus/{status}:
     get:
       tags:
@@ -92,10 +94,6 @@ paths:
                   $ref: '#/components/schemas/Medicine'
         '400':
           description: Invalid status value
-      security:
-        - pharmacy_auth:
-            - write:medicine
-            - read:medicine
   /medicine/findDemand/{demand}:
     get:
       tags:
@@ -128,10 +126,6 @@ paths:
                   $ref: '#/components/schemas/Medicine'
         '400':
           description: Invalid status value
-      security:
-        - pharmacy_auth:
-            - write:medicine
-            - read:medicine
   /medicine/{medicineId}:
     get:
       tags:
@@ -161,11 +155,6 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Medicine not found
-      security:
-        - api_key: []
-        - pharmacy_auth:
-            - write:medicine
-            - read:medicine
     put:
       tags:
         - medicine
@@ -191,10 +180,19 @@ paths:
           schema:
             type: string
       responses:
-        '405':
-          description: Invalid input
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Medicine'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Medicine'
         '400':
-          description: Invalid ID supplied
+          description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
         '404':
           description: Medicine not found
       security:
@@ -222,8 +220,14 @@ paths:
             type: integer
             format: int64
       responses:
+        '200':
+          description: Successful operation
         '400':
-          description: Invalid medicine value
+          description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
+        '404':
+          description: Medicine not found
       security:
         - pharmacy_auth:
             - write:medicine
@@ -253,12 +257,8 @@ paths:
       responses:
         200:
           description: Successful operation
-        405:
+        400:
           description: Invalid input
-      security:
-        - pharmacy_auth:
-            - write:medicine
-            - read:medicine
       requestBody:
         $ref: '#/components/requestBodies/Medicine'
   /pharmacy/inventory:
@@ -278,8 +278,6 @@ paths:
                 additionalProperties:
                   type: integer
                   format: int32
-      security:
-        - api_key: []
   /pharmacy/order:
     post:
       tags:
@@ -305,8 +303,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
-        '405':
+        '400':
           description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
   /pharmacy/order/medicine:
     post:
       tags:
@@ -332,8 +336,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order_details'
-        '405':
+        '400':
           description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
   /pharmacy/order/{orderId}/{medicineId}:
     delete:
       tags:
@@ -356,10 +366,18 @@ paths:
             type: integer
             format: int64
       responses:
+        200:
+          description: Successful operation
         '400':
           description: Invalid ID supplied
         '404':
           description: Order not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
     put:
       tags:
         - pharmacy
@@ -396,10 +414,16 @@ paths:
       responses:
         200:
           description: Successful operation
-        405:
+        400:
           description: Invalid input
         404:
           description: Order not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
   /pharmacy/order/{orderId}:
     get:
       tags:
@@ -428,6 +452,12 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Order not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:category
+            - read:category
     put:
       tags:
         - pharmacy
@@ -457,12 +487,16 @@ paths:
       responses:
         200:
           description: Successful operation
-        405:
-          description: Invalid input
         400:
-          description: Invalid ID supplied
+          description: Invalid input
         404:
           description: Order not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
     delete:
       tags:
         - pharmacy
@@ -477,10 +511,18 @@ paths:
             type: integer
             format: int64
       responses:
+        200:
+          description: Successful operation
         '400':
           description: Invalid ID supplied
         '404':
           description: Order not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:order
+            - read:order
   /user:
     post:
       tags:
@@ -501,7 +543,7 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
-        default:
+        '200':
           description: successful operation
           content:
             application/json:
@@ -513,9 +555,9 @@ paths:
         '400':
           description: Validation Error
         '409':
-          description: User with such username or email or id already exists.
+          description: User with such username or email already exists.
   /user/login:
-    get:
+    post:
       tags:
         - user
       summary: Logs user into the system
@@ -537,39 +579,8 @@ paths:
       responses:
         '200':
           description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/xml:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
-        '400':
+        '401':
           description: Invalid username/password supplied
-        '404':
-          description: User with such username does not exist
-  /user/logout:
-    get:
-      tags:
-        - user
-      summary: Logs out current logged in user session
-      description: ''
-      operationId: logoutUser
-      parameters: []
-      responses:
-        default:
-          description: successful operation
   /user/{userId}:
     get:
       tags:
@@ -599,6 +610,12 @@ paths:
           description: Invalid userId supplied
         '404':
           description: User not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:user
+            - read:user
     put:
       tags:
         - user
@@ -626,12 +643,18 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
-        default:
+        '200':
           description: successful operation
         '400':
           description: Invalid user ID supplied
         '404':
           description: User not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:user
+            - read:user
     delete:
       tags:
         - user
@@ -647,10 +670,18 @@ paths:
             type: integer
             format: int64
       responses:
+        '200':
+          description: successful operation
         '400':
           description: Invalid userId supplied
         '404':
           description: User not found
+        '403':
+          description: Access denied! The operation is forbidden for you
+      security:
+        - pharmacy_auth:
+            - write:user
+            - read:user
   /category:
     post:
       tags:
@@ -681,8 +712,10 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/Category'
-        '405':
+        '400':
           description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
       security:
         - pharmacy_auth:
             - write:category
@@ -716,11 +749,6 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Category not found
-      security:
-        - api_key: []
-        - pharmacy_auth:
-            - write:categor
-            - read:category
     put:
       tags:
         - category
@@ -746,8 +774,14 @@ paths:
           schema:
             type: string
       responses:
-        '405':
+        '200':
+          description: successful operation
+        '400':
           description: Invalid input
+        '403':
+          description: Access denied! The operation is forbidden for you
+        '404':
+          description: Category not found
       security:
         - pharmacy_auth:
             - write:category
@@ -773,8 +807,14 @@ paths:
             type: integer
             format: int64
       responses:
+        '200':
+          description: successful operation
         '400':
           description: Invalid category value
+        '403':
+          description: Access denied! The operation is forbidden for you
+        '404':
+          description: Category not found
       security:
         - pharmacy_auth:
             - write:category
@@ -919,6 +959,7 @@ components:
         - medicine_status
         - manufacturer
         - demand
+        - quantity
       type: object
       properties:
         id_medicine:
@@ -939,8 +980,8 @@ components:
           format: int64
           example: 10
         price:
-          type: integer
-          format: int64
+          type: number
+          format: float64
           example: 10
         medicine_status:
           type: string
@@ -952,6 +993,10 @@ components:
         demand:
           type: boolean
           default: false
+        quantity:
+          type: integer
+          format: int64
+          example: 10
       xml:
         name: medicine
   requestBodies:
