# validation_schemas.py
@@ -8,7 +8,7 @@ class UserSchema(Schema):
     first_name = fields.String(required=True, validate=Length(min=3,max=255))
     last_name = fields.String(required=True, validate=Length(min=3,max=255))
     age = fields.Integer(required=True, strict=True)
-    email = fields.String(required=True, validate=Length(min=12,max=255))
+    email = fields.String(required=True, validate=Length(min=8,max=255))
     password = fields.String(required=True, validate=Length(min=4,max=255))
     phone_number = fields.String(required=True, validate=Length(min=9,max=20))
     userstatus = fields.Str(required=True, validate=validate.OneOf(["user", "pharmacist"]))
@@ -29,6 +29,7 @@ class MedicineSchema(Schema):
     price = fields.Integer(required=True, strict=True)
     medicine_status = fields.Str(required=True, validate=validate.OneOf(["available", "pending", "sold"]))
     demand = fields.Boolean(required=True, strict=True)
+    quantity = fields.Integer(required=True, strict=True)
 
 
 class OrderSchema(Schema):
@@ -74,6 +75,7 @@ class MedicineSchemaUpdate(Schema):
     price = fields.Integer(strict=True)
     medicine_status = fields.Str(validate=validate.OneOf(["available", "pending", "sold"]))
     demand = fields.Boolean(strict=True)
+    quantity = fields.Integer(strict=True)
 
 
 class OrderSchemaUpdate(Schema):
